# rock-dove

./: .gitignore  Cargo.toml  build.rs
src/: args.rs  lib.rs  main.rs
src/bot/: command.rs  guild_context.rs  mod.rs  queue.rs  track_notifier.rs  tracks.rs  undo_stack.rs  util.rs  work_queue.rs
src/bot/command/: execute.rs  mod.rs  parse.rs  remove.rs
src/bot/guild_context/: command_mappings.rs  mod.rs  notifiers.rs  queue.rs  undo_stack.rs
src/commands/: mod.rs
src/git/: binary.rs  fetcher.rs  mod.rs  release.rs
src/yt_dlp/: args.rs  automatic_caption.rs  binaries.rs  download.rs  extractor_info.rs  format.rs  mod.rs  playlist.rs  release.rs  sidecar.rs  thumbnail.rs  video.rs
