[package]
name = "bear_cove"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = {version = "0.12", features = ["simd_json","voice"]}
tokio = { version = "1.21.2", features = ["full", "macros", "rt-multi-thread"] }
thiserror = "2.0.17"
const_format = "0.2.35"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
songbird = {version = "0.5.0", features = ["receive"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
reqwest = "0.12.24"
ordered-float = { version = "5.1.0", features = ["serde"] }
dashmap = { version = "6.1.0", features = ["inline", "serde"] }
ringbuffer = "0.16.0"
symphonia = { features = ["aac", "mp3", "isomp4", "alac"], version = "0.5.5" }
strsim = "0.11.1"


[features]
default = ["tracing"]
tracing = []
