[package]
name = "rock_dove"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", features = ["simd_json", "voice"] }
tokio = { version = "1.21.2", features = ["full", "macros", "rt-multi-thread"] }
thiserror = "2.0.17"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
songbird = {version = "0.5.0", features = ["receive"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
reqwest = "0.12.24"
ordered-float = { version = "5.1.0", features = ["serde"] }
symphonia = { features = ["aac", "mp3", "isomp4", "alac"], version = "0.5.5" }
strsim = "0.11.1"
rand = "0.10.0"
compact_str = { version = "0.9.0", features = ["serde"] }
strum = "0.27.2"
strum_macros = "0.27.2"
hashbrown = { version = "0.16.1", features = ["serde"] }
clap = { version = "4.5.58", features = ["derive"] }
